Fix the spacing between footer sections on phones.

--- a/less/bedazzled.less
+++ b/less/bedazzled.less
@@ -112,8 +112,10 @@
       margin-top: 100px;
       margin-bottom: 50px;
       @media (max-width: @bs-sm) {
-        > .col-md-4 {
-          margin: 10px auto;
+        margin-top: 50px;
+        margin-bottom: 0;
+        > .col-sm-4 {
+          margin: 30px auto;
         }
       }
     }
